Revert "Add stretch goals - nav bar color and fixed background"
This reverts commit 273cc211d297b1f88d2fade8813aef377c2f1b0f.

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -69,7 +69,7 @@ h1, h2, h3, h4, h5 {
 	width: 1024px;
 	border-left: 1px solid #D1D5DA;
 	border-right: 1px solid #D1D5DA;
-	padding: 25px 5px 200px;
+	padding: 25px 75px 200px;
 	margin: auto;
 	font-optical-sizing: auto;
 }
@@ -80,42 +80,18 @@ nav {
 }
 
 nav a {
-	color: #FFFFFF;
-	margin-right: 40px;
+	color: #BDBDBD;
+	margin-right: 56px;
 	text-decoration: none;
-	background: dodgerblue;
-	border-radius: 9px;
-	padding: 0 10px;
-}
-
-nav a:hover {
-	color: #000000;
-	margin-right: 40px;
-	text-decoration: none;
-	background: lightgray;
-	border-radius: 9px;
-	padding: 0 10px;
 }
 
 header {
-	margin:0 50px 75px 50px;
-	position: fixed;
-	z-index: 1;
-
+	margin-bottom: 75px;
 }
 
 header img {
 	vertical-align: middle;
 	margin-left: 30px;
-	background: #FFFFFF;
-	padding: 0 5px;
-	border-radius: 9px;
-}
-
-.cta {
-	padding:  75px 75px 50px 0;
-	padding-right: 75px;
-	padding-bottom: 50px;
 }
 
 .cta-text {
@@ -136,6 +112,7 @@ header img {
 	padding: 7px 40px 8px;
 	margin-top: 8px;
 	text-decoration: none;
+	text
 	font-size: 17px;
 }
 
@@ -151,8 +128,7 @@ header img {
 	border-top: 1px solid black;
 	border-bottom: 1px solid black;
 	padding: 40px 0 40px;
-	margin: auto;
-	vertical-align: middle;
+	margin: 75px 0 50px;
 }
 
 .content-one {
@@ -205,10 +181,6 @@ header img {
 .contact {
 	display: block;
 	text-align: left;
-	margin: auto;
-	vertical-align: middle;
-	padding-left: 70px;
-	padding-top: 25px;
 }
 
 .copyright {
